controller/tests/benchmark/testdata/httpfilterpolicy.yml
- apiVersion: mosn.io/v1
  kind: HTTPFilterPolicy
  metadata:
    name: policy
    namespace: default
  spec:
    targetRef:
      group: networking.istio.io
      kind: VirtualService
      name: httpbin
    filters:
      demo:
        config:
          host_name: Jack
      opa:
        config:
          remote:
            url: http://opa:8181
            policy: test
- apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    namespace: default
  spec:
    gateways:
    - default
    hosts:
    - default.local
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: default
          port:
            number: 888
    - match:
      - uri:
          exact: /route
      name: route
      route:
      - destination:
          host: default
          port:
            number: 888
- apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    name: default
    namespace: default
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - '*.default.local'
      port:
        name: http
        number: 8888
        protocol: HTTP
